# seshat

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
lib/include/: lib_seshat.h
lib/src/: lib_seshat.c
libseshat/src/: CMakeLists.txt  libseshat.c  libseshat.h
libseshat/tests/: CMakeLists.txt  simple.c  test_init_lib_seshat_failure-3.c  test_init_lib_seshat_failure-4.c  test_init_lib_seshat_failure-5.c
scripts/: seshat.conf  seshat.service
src/: CMakeLists.txt  cjson_interface.c  cjson_interface.h  fake_server.c  fake_server.h  json_interface.c  json_interface.h  listener_task.c  listener_task.h  main.c  nmsg.c  nmsg.h  responder_task.c  responder_task.h  seshat_log.h  wrp_interface.c  wrp_interface.h
tests/: CMakeLists.txt  test_cjson_interface.c  test_json_interface.c  test_wrp_interface_CRM_reg.c  test_wrp_interface_CRM_ret.c  test_wrp_interface_free.c
